gccida/g0/dbxout_type_fields
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1193:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1195:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1203:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( tem[1] != 33 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1205:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( tem[1] != 37 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1210:57: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( ( *( ( _BYTE *)&tem[3] + 1) & 0x40) == 0 && tem[1] != 32 ) 
                                                 ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1223:101: error: invalid operands to binary expression ('struct rtx_def' and 'int')
&& ( ( *( ( _BYTE *)&tem[1] + 2) & 0x10) != 0 || ( *( ( _BYTE *)&tem[1] + 2) & 0x20) != 0 || tem[1] != 37) ) 
                                                                                             ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1242:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( tem[1] == 37 && *( _QWORD *)&tem[6] ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1243:23: error: expected expression
rttree = ( tree_node *)tem[6]; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1243:12: error: use of undeclared identifier 'tree_node'
rttree = ( tree_node *)tem[6]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/dbxout.c:1247:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( tem[1] == 34 ) 
     ~~~~~~ ^  ~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_type_fields/src/obj/dbxout.o] Error 1
